Bug 1049325 - Part 1: Notify decoder for input EOS and report MP4Reader when output EOS is reached. r=cpearce